--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8' 
- 
 services: 
   mongodb: 
     image: mongo:6.0 
@@ -28,11 +26,14 @@ services:
       - mean-network 
  
   frontend: 
-    build: ./frontend 
+    image: nginx:alpine 
     container_name: frontend 
     restart: unless-stopped 
     ports: 
       - "4200:80" 
+    volumes:
+    - /home/ec2-user/simple-frontend:/usr/share/nginx/html
+    - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf  
     depends_on: 
       - backend 
     networks: 
