--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -14,7 +14,7 @@ RUN npm run build
 # Production stage 
 FROM nginx:alpine 
  
-COPY --from=build /app/dist/angular-15-crud /usr/share/nginx/html 
+COPY . /usr/share/nginx/html 
  
 COPY nginx.conf /etc/nginx/conf.d/default.conf 
  
