--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,37 +1,44 @@
 name: CI/CD Pipeline
 on:
- push:
+  push:
     branches: [ main ]
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-steps:
+ steps:
     - name: Checkout code
       uses: actions/checkout@v3
-- name: Login to Docker Hub
+    
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+    
+    - name: Login to Docker Hub
       uses: docker/login-action@v2
-      with:
+  with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-- name: Build and push backend image
-      run: |
-        cd backend
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/mean-backend:latest .
+    
+    - name: Build and push backend image
+ run: |
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/mean-backend:latest ./backend
         docker push ${{ secrets.DOCKER_USERNAME }}/mean-backend:latest
-- name: Build and push frontend image
-      run: |
-        cd frontend
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/mean-frontend:latest .
+    
+    - name: Build and push frontend image
+ run: |
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/mean-frontend:latest ./frontend
         docker push ${{ secrets.DOCKER_USERNAME }}/mean-frontend:latest
-- name: Deploy to EC2
+    
+    - name: Deploy to EC2
       uses: appleboy/ssh-action@master
-      with:
+ with:
         host: ${{ secrets.VM_HOST }}
         username: ${{ secrets.VM_USERNAME }}
         key: ${{ secrets.VM_SSH_KEY }}
         script: |
           cd mean-crud-devops
           git pull origin main
+          docker-compose -f docker-compose.prod.yml down
           docker-compose -f docker-compose.prod.yml pull
           docker-compose -f docker-compose.prod.yml up -d
           docker system prune -f
